Fixed and aligned CSS colours.

--- a/styles/header.css
+++ b/styles/header.css
@@ -5,7 +5,7 @@ Header styles
 .search-categories-header {
   top: 0;
   z-index: 1;
-  background-color: white;
+  background-color: #ffffff;
   padding-top: 14px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.03), 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
@@ -94,7 +94,7 @@ Header styles
   flex-direction: column;
   align-items: center;
   text-wrap: nowrap;
-  /* CSS filters are used here to dynamically change all category items' image and text colors to a grey tint.
+  /* CSS filters are used here to dynamically change all category items' image and text colours to a grey tint.
   And this CSS filter is then unset in the category item's hover state below,
   returning the "hovered over" category item to its original black foreground colour.
   For details on CSS filters, see: https://stackoverflow.com/questions/22252472/how-to-change-the-color-of-an-svg-element
